<resources>
    <string name="app_name">SerLiMA</string>
    <string name="tempo_por_zona">Tempo por zona</string>
    <string name="pse">pse</string>
    <string name="hr_tss">hr tss</string>
    <string name="tss">tss</string>
    <string name="em_minutos">Em minutos</string>
    <string name="valor_tss">Valor tss</string>
    <string name="tempo">Tempo</string>
    <string name="calcular">Calcular</string>
    <string name="disponibilidade">Disponibilidade</string>
    <string name="valor_hrtss_text">Valor HrTss</string>
    <string name="empty" />
    <string name="zona_5">Zona 5</string>
    <string name="zona_4">Zona 4</string>
    <string name="zona_3">Zona 3</string>
    <string name="zona_2">Zona 2</string>
    <string name="zona_1">Zona 1</string>
    <string name="intruduz_os_valores_em_minutos_e_pressiona_calcular">Intruduz os valores em minutos e pressiona calcular</string>
    <string name="_1_10">1–10</string>
    <string name="valor_pse">Valor PSE</string>
    <string name="tempo_em_minutos">Tempo em minutos</string>
    <string name="tipo_de_atividade">Tipo de atividade</string>
    <string name="ter_a_feira">Terça-feira</string>
    <string name="quarta_feira">Quarta-feira</string>
    <string name="quinta_feira">Quinta-feira</string>
    <string name="sexta_feira">Sexta-feira</string>
    <string name="s_bado">Sábado</string>
    <string name="enviar">Enviar</string>
    <string name="acompanhamentoprofissional">Acompanhamento\nProfissional</string>
    <string name="created_by_nhenrique_guimar_es">Created by: \nHenrique Guimarães</string>
    <string name="timeZero">00:00</string>
    <string name="timeformat">%1$d:%2$d </string>
    <string name="segunda_feira">Segunda-Feira</string>
</resources>